Add internal API key endpoints
